--- a/Planeacion&OrganizacionA2023.html
+++ b/Planeacion&OrganizacionA2023.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title> Compromiso Social e Institucional</title>
+    <title>Planeacion y Organización Académica</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -73,118 +73,80 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="blog_text">Compromiso Social e Institucional</h1>
+                    <h1 class="blog_text">Planeacion y Organización Académica 2023</h1>
                 </div>
-                <p>CONTRIBUCIÓN: Colabora y coopera genuinamente con los demás docentes de la institución para el logro
-                    de un objetivo común, asegurando que la información compartida sea confiables y fluya oportunamente
-                    entre las personas del grupo.
-                    ​Promueve en los estudiantes la capacidad y el deseo de establecer interacciones con los otros,
-                    realizando trabajos de manera colectiva que contribuyan con su aprendizaje.
-                    Apoyo a semana institucional (Ambientes híbridos de aprendizaje)
-                </p>
+                <p>
+                    Contribución: Planeacion de los procesos de enseñanza y aprendizaje, organización de contenidos
+                    y actividades en busca de la participación activa de los estudiantes.
 
 
             </div>
             <div class="blog_section_2">
                 <div class="row">
-                    <div class="col-sm-3">
+                    <div class="col-sm-4">
                         <div class="section_1">
                             <div>
 
                                 <iframe
-                                    src="https://drive.google.com/file/d/1Mjvk5FyyI928CcfNYXQLFjIcldoELaPT/preview"
+                                    src="https://drive.google.com/file/d/15VoJaftO69T7iRiMMn-9WPRQOHgv6Q50/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Actualizacion Periodico
-                            </button>
-                            <p> Trabajo en Equipo</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-3">
-                        <div class="section_1">
-                            <div>
-
-                                <iframe
-                                    src="https://drive.google.com/file/d/1CN11pEqrYsfrcrXgvAk4Hft1KMK9ODfs/preview"
-                                    width="100%" height="300px"></iframe>
-                            </div>
-                            <button type="button" class="btn btn-primary">Actualizacion tablero mural </button>
-                            <p> Trabajo en Equipo</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-3">
-                        <div class="section_1">
-                            <div>
-
-                                <iframe
-                                    src="https://drive.google.com/file/d/1bOSqkGYnzrRPsv848zADcZHICyi3cU6n/preview"
-                                    width="100%" height="300px"></iframe>
-                            </div>
-                            <button type="button" class="btn btn-primary">Festival de la cometa</button>
+                            <button type="button" class="btn btn-primary">Estrategias de aula de clases </button>
 
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-4">
                         <div class="section_1">
                             <div>
 
                                 <iframe
-                                    src="https://drive.google.com/file/d/1vcAwuVc0ZFZ94UWHIv5_WpkI-T7erroh/preview"
+                                    src="https://drive.google.com/file/d/1D-QPlf_lJXWh0ZbWr2mRvziei1ONMUcc/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Izada de Bandera primer Semestre </button>
+                            <button type="button" class="btn btn-primary">Estrategias Pedagógicas</button>
 
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="section_1">
+                            <div>
+                                <iframe
+                                    src="https://drive.google.com/file/d/1NC5-VqitgtYecHBvFVs_EL_AoduC4fy6/preview"
+                                    width="100%" height="300px"></iframe>
+                            </div>
+                            <button type="button" class="btn btn-primary">Malla Curricula 6° 2023</button>
                         </div>
                     </div>
                 </div>
-
             </div>
-<!--SEGUNDO BLOQUE-->
             <div class="blog_section_2">
-                <div class="row">
-                    <div class="col-sm-3">
+                <div class="row ">
+
+                    <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-
                                 <iframe
-                                    src="https://drive.google.com/file/d/1tNpOxGgxF-7CVNez3V6BxMiCfokFGae-/preview"
+                                    src="https://drive.google.com/file/d/1GhN1JbxjDIXSzhmF7NOzDY1ClGDx0TJV/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Primera Semana Institucional</button>
-                            <p> </p>
-                        </div>
-                    </div>
-                    <div class="col-sm-3">
-                        <div class="section_1">
-                            <div>
-
-                                <iframe
-                                    src="https://drive.google.com/file/d/1Cr8TSmvp42TtlkgcXEXxIIguZOKgzZDC/preview"
-                                    width="100%" height="300px"></iframe>
-                            </div>
-                            <button type="button" class="btn btn-primary">Reunion de padres de familia </button>
-                            <p></p>
+                            <button type="button" class="btn btn-primary">Modelo de preparador - Planeacion de clases</button>
                         </div>
                     </div>
 
-                    <div class="col-sm-3">
+                    <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-
                                 <iframe
-                                    src="https://drive.google.com/file/d/1UFVKha31uaHRZgfLht9G_hqRKc_Rkjvh/preview"
+                                    src="https://drive.google.com/file/d/1oyJsDd5IinMT1ua0kl1CByI65yPN47hR/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Izada A la Bandera </button>
-                            <p></p>
+                            <button type="button" class="btn btn-primary">Plan de area lenguaje 2023</button>
                         </div>
                     </div>
 
-
-
-
+                </div>
+            </div>
         </div>
-    </div>
     </div>
 
     <!--blog end -->
