--- a/adminRecursos2023.html
+++ b/adminRecursos2023.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title> Compromiso Social e Institucional</title>
+    <title>Administración de los Recursos</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -73,118 +73,68 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="blog_text">Compromiso Social e Institucional</h1>
+                    <h1 class="blog_text">Uso de los Recursos 2023</h1>
                 </div>
-                <p>CONTRIBUCIÓN: Colabora y coopera genuinamente con los demás docentes de la institución para el logro
-                    de un objetivo común, asegurando que la información compartida sea confiables y fluya oportunamente
-                    entre las personas del grupo.
-                    ​Promueve en los estudiantes la capacidad y el deseo de establecer interacciones con los otros,
-                    realizando trabajos de manera colectiva que contribuyan con su aprendizaje.
-                    Apoyo a semana institucional (Ambientes híbridos de aprendizaje)
-                </p>
-
-
             </div>
             <div class="blog_section_2">
                 <div class="row">
-                    <div class="col-sm-3">
+                    <div class="col-sm-4">
                         <div class="section_1">
                             <div>
 
                                 <iframe
-                                    src="https://drive.google.com/file/d/1Mjvk5FyyI928CcfNYXQLFjIcldoELaPT/preview"
+                                    src="https://drive.google.com/file/d/1AKnTh1BWh2mqSJj91YPkE5OjSE-Ynv_R/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Actualizacion Periodico
-                            </button>
-                            <p> Trabajo en Equipo</p>
+                            <button type="button" class="btn btn-primary">Ambientación </button>
+                            <p>Ambientación del aula de clases</p>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-4">
                         <div class="section_1">
                             <div>
 
                                 <iframe
-                                    src="https://drive.google.com/file/d/1CN11pEqrYsfrcrXgvAk4Hft1KMK9ODfs/preview"
+                                    src="https://drive.google.com/file/d/1iFLNLujFpAHY9mlal_d0jnLhrwzeFyKQ/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Actualizacion tablero mural </button>
-                            <p> Trabajo en Equipo</p>
+                            <button type="button" class="btn btn-primary">Jornada de Aseo</button>
+                            <p>Jornada de Aseo</p>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-4">
                         <div class="section_1">
                             <div>
 
                                 <iframe
-                                    src="https://drive.google.com/file/d/1bOSqkGYnzrRPsv848zADcZHICyi3cU6n/preview"
+                                    src="https://drive.google.com/file/d/1yotbiYmlPwrrvzR9tDAwS_iz1TtSCvFk/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Festival de la cometa</button>
-
-                        </div>
-                    </div>
-                    <div class="col-sm-3">
-                        <div class="section_1">
-                            <div>
-
-                                <iframe
-                                    src="https://drive.google.com/file/d/1vcAwuVc0ZFZ94UWHIv5_WpkI-T7erroh/preview"
-                                    width="100%" height="300px"></iframe>
-                            </div>
-                            <button type="button" class="btn btn-primary">Izada de Bandera primer Semestre </button>
-
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-<!--SEGUNDO BLOQUE-->
-            <div class="blog_section_2">
-                <div class="row">
-                    <div class="col-sm-3">
-                        <div class="section_1">
-                            <div>
-
-                                <iframe
-                                    src="https://drive.google.com/file/d/1tNpOxGgxF-7CVNez3V6BxMiCfokFGae-/preview"
-                                    width="100%" height="300px"></iframe>
-                            </div>
-                            <button type="button" class="btn btn-primary">Primera Semana Institucional</button>
+                            <button type="button" class="btn btn-primary">Mural de clases</button>
                             <p> </p>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <br>
+                    <div class="blog_section_2">
+                    <div class="col-sm-4">
                         <div class="section_1">
                             <div>
 
                                 <iframe
-                                    src="https://drive.google.com/file/d/1Cr8TSmvp42TtlkgcXEXxIIguZOKgzZDC/preview"
+                                    src="https://drive.google.com/file/d/1wOEBoHzoDuA1IzYjFDgmwo1c_cduc5YX/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Reunion de padres de familia </button>
-                            <p></p>
+                            <button type="button" class="btn btn-primary">Aula de clase</button>
+                            <p> </p>
                         </div>
                     </div>
+                </div>
+                </div>
+            </div>
 
-                    <div class="col-sm-3">
-                        <div class="section_1">
-                            <div>
-
-                                <iframe
-                                    src="https://drive.google.com/file/d/1UFVKha31uaHRZgfLht9G_hqRKc_Rkjvh/preview"
-                                    width="100%" height="300px"></iframe>
-                            </div>
-                            <button type="button" class="btn btn-primary">Izada A la Bandera </button>
-                            <p></p>
-                        </div>
-                    </div>
-
-
-
+         
 
         </div>
-    </div>
     </div>
 
     <!--blog end -->
