--- a/blog8.html
+++ b/blog8.html
@@ -89,18 +89,18 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="" target="_blank"><input type="image" src="images/Uso de los recursos.jpg" style="max-width: 100%;">
+                                <a href="adminRecursos2023.html" target="_blank"><input type="image" src="images/Uso de los recursos.jpg" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
-                            <p>Administracion de recursos </p>
+                            <p>Uso de recursos </p>
                         </div>
                     </div>
 
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="" target="_blank"><input type="image" src="images/Seguimiento de procesos.jpg" style="max-width: 100%;">
+                                <a href="SeguimientoDeProceso2023.html" target="_blank"><input type="image" src="images/Seguimiento de procesos.jpg" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
