--- a/interacionEntorno2023.html
+++ b/interacionEntorno2023.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="blog_text">Convivencia Institucional</h1>
+                    <h1 class="blog_text">Interacción con la comunidad y el entorno</h1>
                 </div>
             </div>
             <div class="blog_section_2">
@@ -90,8 +90,43 @@
                             <p> </p>
                         </div>
                     </div>
-                    
-                    
+
+                    <div class="col-sm-4">
+                        <div class="section_1">
+                            <div>
+
+                                <iframe
+                                    src="https://drive.google.com/file/d/1OpnaQTBCOWBij51lOO57yrHDlruHBTxM/preview"
+                                    width="100%" height="300px"></iframe>
+                            </div>
+                            <button type="button" class="btn btn-primary">Sala De Lectura </button>
+                            <p> </p>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="section_1">
+                            <div>
+
+                                <iframe
+                                    src="https://drive.google.com/file/d/198OtPgeVqs-tFsrR-pYx2XVOL59Zvxxy/preview"
+                                    width="100%" height="300px"></iframe>
+                            </div>
+                            <button type="button" class="btn btn-primary">Un viaje en la imaginación </button>
+                            <p> </p>
+                        </div>
+                    </div>
+                    <div class="blog_section_2">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="col-sm-4">
+                                    <div class="section_1">
+                                        <div>
+                                            <iframe width="1100" height="360" src="https://www.youtube.com/embed/OT-6BZ_7gN4" frameborder="0" allowfullscreen></iframe>
+                                        </div>
+                                        <button type="button" class="btn btn-primary">Magazine INESAC</button>
+                                        <p></p>
+                                    </div>
+                                </div>
 
     <!--blog end -->
     <!--Contact_section start -->
