--- a/blog7.html
+++ b/blog7.html
@@ -89,11 +89,11 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="convivenciaInst2023.html" target="_blank"><input type="image" src="images/Dominio curriular.jpg" style="max-width: 100%;">
+                                <a href="convivenciaInst2023.html" target="_blank"><input type="image" src="images/NDidactica.jpg" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
-                            <p>Didactica </p>
+                            <p>Pedagógia & Didactica </p>
                         </div>
                     </div>
 
@@ -104,14 +104,14 @@
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
-                            <p>Dominio Conceptual </p>
+                            <p>Dominio Curricular </p>
                         </div>
                 </div>
 
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="evaluacionDelAprendizaje 2023.html" target="_blank"><input type="image" src="images/PLaneación Y Organización Académica.png" style="max-width: 100%;">
+                                <a href="evaluacionDelAprendizaje 2023.html" target="_blank"><input type="image" src="images/NEvaluacion de aprendizaje.jpg" style="max-width: 60%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
@@ -122,7 +122,7 @@
                     <div class="col-sm-4">
                         <div class="section_1">
                             <div>
-                                <a href="" target="_blank"><input type="image" src="images/PLaneación Y Organización Académica.png" style="max-width: 100%;">
+                                <a href="Planeacion&OrganizacionA2023.html" target="_blank"><input type="image" src="images/PLaneación Y Organización Académica.png" style="max-width: 100%;">
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
