--- a/competencias6.html
+++ b/competencias6.html
@@ -124,7 +124,7 @@
                             <div>
                                 <p><input title="Clic aquí" type="image" src="images/clicaqui.png" style="max-width: 100%;">
                             </div>
-                            <center><a  target="_blank" href="https://drive.google.com/drive/folders/11ibqCqBE9LgCaMtLmW9tok6nnBuuHe6N?usp=drive_link" 
+                            <center><a  target="_blank" href="https://drive.google.com/drive/u/1/folders/1CWERjTW2684SzY5fpSxkpDbIA70OqrMX" 
                                 class="btn btn-primary">Link a AZ </a></center>
                         
                         </div>
