--- a/index.html
+++ b/index.html
@@ -162,21 +162,22 @@
             </div>
         </div>
         <div class="service_main">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="written_text">                                   
+            <div class="container" >
+                <div class="row" >
+                    <div class="col-md-6" >
+                        <div class="written_text2">                                   
                             <a>
-                             <h1 class="written_text">Experiencias Inesaistas 2023</h1>
+                             <h1 class="written_text2">Experiencias Inesaistas 2023</h1>
                             </a>
                             <a href="competencias6.html"> 
-                                <h2 class="written_text">  COMPETENCIAS
+                                <h2 class="written_text2">  COMPETENCIAS
                                 FUNCIONALES   (Clic aquí)</h2>
-                             <p>Corresponden al desempeño de las responsabilidades específicas del cargo de
-                                docente o directivo docente, definidas en la ley y los reglamentos</p>
+                             
                             </a>
+                            <p>Corresponden al desempeño de las responsabilidades específicas del cargo de
+                                docente o directivo docente, definidas en la ley y los reglamentos</p>
                             <a href="competencias7.html">
-                                <h2 class="written_text">
+                                <h2 class="written_text2">
                                     COMPETENCIAS COMPORTAMENTALES (Clic aquí)</h2>
                             </a>
                             <p>Se refieren a las actitudes, los valores, los intereses y las motivaciones
