--- a/blog10.html
+++ b/blog10.html
@@ -115,7 +115,7 @@
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
-                            <p>Evaluacion de aprendizaje</p>
+                            <p>Evaluaciòn de aprendizaje</p>
                         </div>
                     </div>
                 </div></div>
@@ -126,7 +126,7 @@
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
-                            <p>Planeacion y organizacion academica</p>
+                            <p>Planeaciòn y organizaciòn academica</p>
                         </div>
                     </div>
                 
