--- a/blog12.html
+++ b/blog12.html
@@ -93,7 +93,7 @@
                             </div>
                             </a>
                             <h3><button src="#" type="button" class="date-bt"></button></a></h3>
-                            <p>Comunicacion institucional</p>
+                            <p>Comunicaciòn institucional</p>
                         </div>
                     </div>
 
