--- a/competencias8.html
+++ b/competencias8.html
@@ -124,7 +124,7 @@
                             <div>
                                 <p><input title="Clic aquí" type="image" src="images/clicaqui.png" style="max-width: 100%;">
                             </div>
-                            <center><a  target="_blank" href="https://drive.google.com/drive/folders/1YWQojqKn6rqDz7wzZ2EhfutqMGlwEBZo" 
+                            <center><a  target="_blank" href="https://drive.google.com/drive/folders/16K_8nm2R09hq3Nsr5Y4c8_rwWbtlcmfL?usp=sharing_eip_m&ts=663a4bdb" 
                                 class="btn btn-primary">Link a AZ </a></center>
                         
                         </div>
