--- a/compromisoInstitucional2024.html
+++ b/compromisoInstitucional2024.html
@@ -131,7 +131,7 @@
                                     src="https://drive.google.com/file/d/1lqJw5Yo2q3kIEgALGKfQY2vcUsaiESJW/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Celebracion </button>
+                            <button type="button" class="btn btn-primary">Celebraciòn </button>
                             <p>dia del hombre y mujer</p>
 
                         </div>
@@ -175,7 +175,7 @@
                                     src="https://drive.google.com/file/d/1NgBrspUzWV1EvJ9O2IkxR8aNE5hlT7qw/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Jornada Pedagogica </button>
+                            <button type="button" class="btn btn-primary">Jornada pedagogica</button>
                             <p></p>
                         </div>
                     </div>
@@ -216,7 +216,7 @@
                         src="https://drive.google.com/file/d/1eLeAZHXmmMGRZrRNRY6l_SKXUGRnhvhq/preview"
                         width="100%" height="300px"></iframe>
                 </div>
-                <button type="button" class="btn btn-primary">Reunion de padres</button>
+                <button type="button" class="btn btn-primary">Reuniòn de padres</button>
                 <p></p>
             </div>
         </div>
