--- a/convivenciaInst2024.html
+++ b/convivenciaInst2024.html
@@ -88,7 +88,7 @@
                                     width="100%" height="300px"></iframe>
                             </div>
                             <button type="button" class="btn btn-primary">Actividades </button>
-                            <p>Actividades de diagnostica y ambientacion de inicio </p>
+                            <p>Actividades de diagnostica y ambientaciòn de inicio </p>
                         </div>
                     </div>
 
@@ -101,7 +101,7 @@
                                     width="100%" height="300px"></iframe>
                             </div>
                             <button type="button" class="btn btn-primary">Actividades </button>
-                            <p>Actividades de aprendizaje y ambientacion </p>
+                            <p>Actividades de aprendizaje y ambientaciòn </p>
                         </div>
                     </div>
 
@@ -113,8 +113,8 @@
                                     src="https://drive.google.com/file/d/1_Zb2GD5F3viHiQepkII8hm7lC6Ja9CLT/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Ambientacion </button>
-                            <p>Ambientacion escolar </p>
+                            <button type="button" class="btn btn-primary">Ambientaciòn </button>
+                            <p>Ambientaciòn escolar </p>
                         </div>
                     </div>
     <!-- ------------- -->
@@ -155,8 +155,8 @@
                         src="https://drive.google.com/file/d/1U4GxFUvK2V_CEyVinPpIdSdir5Vhe99n/preview"
                         width="100%" height="300px"></iframe>
                 </div>
-                <button type="button" class="btn btn-primary">Comprencion </button>
-                <p>Niveles de Comprencion</p>
+                <button type="button" class="btn btn-primary">Comprensiòn </button>
+                <p>Niveles de Comprensiòn</p>
             </div>
         </div>
 
