--- a/dominioCurricular2024.html
+++ b/dominioCurricular2024.html
@@ -89,7 +89,7 @@
                                     width="100%" height="300px"></iframe>
                             </div>
                             <button type="button" class="btn btn-primary"> Tiempo</button>
-                            <p> Distribucion de tiempo</p>
+                            <p> Distribuciòn de tiempo</p>
                         </div>
                     </div>
                     <div class="col-sm-4">
@@ -100,7 +100,7 @@
                                     src="https://drive.google.com/file/d/1PBjuVqxM8ci58h62Qsv1TUsMr8Odh2Ge/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Reunion Humanidades</button>
+                            <button type="button" class="btn btn-primary">Reuniòn Humanidades</button>
                             <p>Ajustes de mallas APZ </p>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                                     src="https://drive.google.com/file/d/1B7gU85jv-HgV-BWdFXTMp_3oZhiqsqxI/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary"> Reunion Area de Humanidades</button>
+                            <button type="button" class="btn btn-primary"> Reuniòn Area de Humanidades</button>
                             <p> Humanidades.</p>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                                             src="https://drive.google.com/file/d/1F0lKTNdZWPQqCFCVpBTLr_EAoD7TqN4H/preview"
                                             width="100%" height="300px"></iframe>
                                     </div>
-                                    <button type="button" class="btn btn-primary">Reunion CDA lenguaje</button>
+                                    <button type="button" class="btn btn-primary">Reuniòn CDA lenguaje</button>
                                     <p> CDA lenguaje</p>
                                 </div>
                             </div>
