--- a/evaluacionAprendizaje2024.html
+++ b/evaluacionAprendizaje2024.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="blog_text">Evaluacion Del Aprendizaje 2024</h1>
+                    <h1 class="blog_text">Evaluaciòn Del Aprendizaje 2024</h1>
                    
                     
                 </div>
@@ -88,7 +88,7 @@
                                     src="https://drive.google.com/file/d/1KdZN9LphajoxWMMNcqrM7BCQRAtAccox/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Actividades de nivelacion</button>
+                            <button type="button" class="btn btn-primary">Actividades de nivelaciòn</button>
                             <p> </p>
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                                 src="https://drive.google.com/file/d/1EmqRI2rlTPwNT2P4ycCa-fd2Gdz4zCzC/preview"
                                 width="100%" height="300px"></iframe>
                         </div>
-                        <button type="button" class="btn btn-primary">Evaluacion final de periodo</button>
+                        <button type="button" class="btn btn-primary">Evaluaciòn final de periodo</button>
                         <p> </p>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                                 src="https://drive.google.com/file/d/1w4yy3SM3kBsB3GT05yWdFlKPKoeWkrOb/preview"
                                 width="100%" height="300px"></iframe>
                         </div>
-                        <button type="button" class="btn btn-primary">Nivelacion</button>
+                        <button type="button" class="btn btn-primary">Nivelaciòn</button>
                         <p>Cuarto periodo </p>
                     </div>
                 </div>
