--- a/orientacionLogro2024.html
+++ b/orientacionLogro2024.html
@@ -94,7 +94,7 @@
                                     width="100%" height="300px"></iframe>
                             </div>
                             <button type="button" class="btn btn-primary">Actividades</button>
-                            <p>Promocion de lectura</p>
+                            <p>Promociòn de lectura</p>
 
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                                     src="https://drive.google.com/file/d/1E5Gu8Q4jFVJ-96odMeHibpOBMO2IW9aV/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Aplicacion de pruebas saber</button>
+                            <button type="button" class="btn btn-primary">Aplicaciòn de pruebas saber</button>
                             <p>2024</p>
 
                         </div>
@@ -132,7 +132,7 @@
                                     src="https://drive.google.com/file/d/1-0HZwUsinzOdmawieecWRpxwGVRGB1Ev/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Produccion de discursos</button>
+                            <button type="button" class="btn btn-primary">Producciòn de discursos</button>
                             <p>argumentativos</p>
 
                         </div>
