--- a/planeacionOrganizacion2024.html
+++ b/planeacionOrganizacion2024.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="blog_text">Planeacion y Organización Académica 2024</h1>
+                    <h1 class="blog_text">Planeaciòn y Organización Académica 2024</h1>
                 </div>
                 <p>
                     Contribución: Planeacion de los procesos de enseñanza y aprendizaje, organización de contenidos
@@ -91,7 +91,7 @@
                                     src="https://drive.google.com/file/d/1sxNrZz5TmGKpKYNa3r1LB9B-XpMWwdu0/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Actividades de Comprencion</button>
+                            <button type="button" class="btn btn-primary">Actividades de Comprensiòn</button>
 
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                                     src="https://drive.google.com/file/d/1oupOJbHLxBD8lDtxb8xCfZl9rggb6tYc/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Sintesis y relacion</button>
+                            <button type="button" class="btn btn-primary">Sintesis y relaciòn</button>
                         </div>
                     </div>                    
 
