--- a/seguimientoProceso2024.html
+++ b/seguimientoProceso2024.html
@@ -99,7 +99,7 @@
                                     src="https://drive.google.com/file/d/1a7OZKVh5Au3MHdXe6q2CNzo43b2Yfp7U/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Comision de Eva - promocion </button>
+                            <button type="button" class="btn btn-primary">Comisiòn de Eva - promociòn </button>
                             <p></p>
                         </div>
                     </div>
@@ -112,8 +112,8 @@
                                     src="https://drive.google.com/file/d/1g5fiSti8UU15OjhBa0pqmX0xiacGAtn2/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Comision de evaluacion y promocion </button>
-                            <p>Promocion y evaluacion </p>
+                            <button type="button" class="btn btn-primary">Comisiòn de evaluaciòn y promociòn </button>
+                            <p>Promociòn y evaluaciòn </p>
                         </div>
                     </div>
                    
@@ -134,7 +134,7 @@
                                     src="https://drive.google.com/file/d/1rZbQjm48Lpu6IpglN7Nbq4oO5ezg861_/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Comision de evaluacion y promocion </button>
+                            <button type="button" class="btn btn-primary">Comisiòn de evaluaciòn y promociòn </button>
                             <p> </p>
                         </div>
                     </div>
@@ -160,8 +160,8 @@
                                     src="https://drive.google.com/file/d/1mxyGktcaNLCu_D94ptGv6LK5V8m2elaS/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Reunion Comision de evaluacion y promocion </button>
-                            <p>Reunion</p>
+                            <button type="button" class="btn btn-primary">Reuniòn Comisiòn de evaluaciòn y promociòn </button>
+                            <p>Reuniòn</p>
                         </div>
                     </div>
                    
