--- a/usoRecursos2024.html
+++ b/usoRecursos2024.html
@@ -110,7 +110,7 @@
                                     src="https://drive.google.com/file/d/1FJKBK_2Xyu9SvAZ7RwgYJLK54Th9xrlQ/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Decoracion del Aula de clases</button>
+                            <button type="button" class="btn btn-primary">Decoraciòn del Aula de clases</button>
                             <p> </p>
                         </div>
                     </div>
