--- a/ComunicacionInst2024.html
+++ b/ComunicacionInst2024.html
@@ -86,7 +86,7 @@
                                     src="https://drive.google.com/file/d/1MBszfXzfIxjTNaglCL1EsoElZkxDsGzB/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Comision de evaluacion y promocion </button>
+                            <button type="button" class="btn btn-primary">Comisiòn de evaluaciòn y promociòn </button>
                             <p> </p>
                         </div>
                     </div>
@@ -99,8 +99,8 @@
                                     src="https://drive.google.com/file/d/1JOkhz1NwNqib54xOvCXflAT4RtQSjF0w/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Comision de evaluacion y promocion </button>
-                            <p>Evaluacion y promocion </p>
+                            <button type="button" class="btn btn-primary">Comisiòn de evaluaciòn y promociòn </button>
+                            <p>Evaluaciòn y promociòn </p>
                         </div>
                     </div>
                     
@@ -139,8 +139,8 @@
                                             src="https://drive.google.com/file/d/1Jx122yqqcisb_M_wgxnEjey1rfYRjah8/preview"
                                             width="100%" height="300px"></iframe>
                                     </div>
-                                    <button type="button" class="btn btn-primary">Primera Reunion de padres de familia </button>
-                                    <p>Reunion</p>
+                                    <button type="button" class="btn btn-primary">Primera Reuniòn de padres de familia </button>
+                                    <p>Reuniòn</p>
                                 </div>
                             </div>
 
@@ -152,8 +152,8 @@
                                             src="https://drive.google.com/file/d/1_PvdMJp6wDGdfb3RSLs03NHDV8Zd6sLM/preview"
                                             width="100%" height="300px"></iframe>
                                     </div>
-                                    <button type="button" class="btn btn-primary">Reunion de padres de familia </button>
-                                    <p>Reunion</p>
+                                    <button type="button" class="btn btn-primary">Reuniòn de padres de familia </button>
+                                    <p>Reuniòn</p>
                                 </div>
                             </div>
                             
@@ -169,8 +169,8 @@
                             src="https://drive.google.com/file/d/1DEMsr8ddBzMdktnVk40TMd9Euz1nXaa9/preview"
                             width="100%" height="300px"></iframe>
                     </div>
-                    <button type="button" class="btn btn-primary">Reunion de padres </button>
-                    <p>Reunion</p>
+                    <button type="button" class="btn btn-primary">Reuniòn de padres </button>
+                    <p>Reuniòn</p>
                 </div>
             </div>
             <div class="col-sm-4">
