--- a/InteraccionEntorno2024.html
+++ b/InteraccionEntorno2024.html
@@ -86,7 +86,7 @@
                                     src="https://drive.google.com/file/d/1O4Qsr_5B50cBI-CJSJ5APbuqWqfPwTOt/preview"
                                     width="100%" height="300px"></iframe>
                             </div>
-                            <button type="button" class="btn btn-primary">Actividades de promocion y lectura </button>
+                            <button type="button" class="btn btn-primary">Actividades de promociòn y lectura </button>
                             <p> Actividades </p>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                                                     src="https://drive.google.com/file/d/1vDYf94_dr1zqMId8EnJ8XmdAbsJZ5cI3/preview"
                                                     width="100%" height="300px"></iframe>
                                             </div>
-                                            <button type="button" class="btn btn-primary">Dia del idioma </button>
+                                            <button type="button" class="btn btn-primary">Dìa del idioma </button>
                                             <p></p>
                                         </div>
                                     </div>
