--- a/index.html
+++ b/index.html
@@ -207,6 +207,49 @@
                 </div>
             </div>
         </div>
+        <div class="service_main">
+            <div class="container">
+                <div class="row">
+                    <!-- Primer contenedor -->
+                    <div class="col-md-6">
+                        <div class="written_text2">
+                            <a>
+                                <h1 class="written_text2">Experiencias Inesaistas 2025</h1>
+                            </a>
+                            <a href="competencias10.html">
+                                <h2 class="written_text2">COMPETENCIAS FUNCIONALES (Clic aquí)</h2>
+                            </a>
+                            <p>Corresponden al desempeño de las responsabilidades específicas del cargo de
+                                docente o directivo docente, definidas en la ley y los reglamentos</p>
+                            <a href="competencias11.html">
+                                <h2 class="written_text2">COMPETENCIAS COMPORTAMENTALES (Clic aquí)</h2>
+                            </a>
+                            <p>Se refieren a las actitudes, los valores, los intereses y las motivaciones
+                                con que los educadores cumplen sus funciones. Son comunes a docentes
+                                y directivos docentes.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Segundo contenedor -->
+                    <div class="col-md-6">
+                        <div class="written_text2 bg-danger text-white">
+                            <a>
+                                <h1 class="written_text2 bg-danger text-white"></h1>
+                            </a>
+                            <a href="competencias8.html">
+                                <h2 class="written_text2 bg-danger text-white"></h2>
+                            </a>
+                            <p></p>
+                            <a href="competencias9.html">
+                                <h2 class="written_text2 bg-danger text-white"></h2>
+                            </a>
+                            <p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>        
         
 </div>
         <div class="contact_main">
